4.28 3